src/iptables.simple-nat.v4
# Generated by iptables-save v1.8.7 on Mon Sep 26 18:08:30 2022
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [552981:511736726]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p udp -m udp --dport 55777 -j ACCEPT
-A INPUT -s 10.23.1.10/32 -i ens192 -p udp -m udp --dport 123 -j ACCEPT
-A INPUT -s 10.19.0.0/24 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -s 8.8.8.8/22 -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT                                                                                                                                                             PT
-A INPUT -j DROP
-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p icmp -j ACCEPT
-A FORWARD -s 10.19.0.0/26 -d 10.23.1.10/32 -p tcp -m tcp --dport 5432 -j ACCEPT
-A FORWARD -s 10.19.0.0/26 -d 10.23.1.10/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 10.19.0.0/26 -d 10.23.1.5/32 -p tcp -m tcp --dport 5000 -j ACCEPT
-A FORWARD -s 10.19.0.0/26 -d 10.23.1.5/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A FORWARD -s 10.19.0.0/24 -d 10.23.1.5/32 -p tcp -m tcp --dport 80 -j ACCEPT
-A FORWARD -s 10.19.0.0/24 -d 10.23.1.5/32 -p tcp -m tcp --dport 63478 -j ACCEPT
-A FORWARD -s 10.23.1.5/32 -o ens224 -j ACCEPT
-A FORWARD -j DROP
COMMIT
# Completed on Mon Sep 26 18:08:30 2022
# Generated by iptables-save v1.8.7 on Mon Sep 26 18:08:30 2022
*nat
:PREROUTING ACCEPT [168997:11549107]
:INPUT ACCEPT [24573:956746]
:OUTPUT ACCEPT [5315:403886]
:POSTROUTING ACCEPT [5510:415588]
-A POSTROUTING -s 10.23.1.5/32 -o ens224 -j MASQUERADE
COMMIT
